<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/deleteTheFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:shadowColor="#000000"
        android:text="@string/are_you_sure"
        android:textColor="#FA0000"
        android:textColorLink="#FA0000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_selected_delete"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/yes" />

    <Button
        android:id="@+id/button_go_back"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/go_back" />

</LinearLayout>